# Tran-API-1zip

./: .replit  pyproject.toml  replit.md
Tran-API-1/: .gitignore  .replit  app.py  main.py  pyproject.toml  replit.md
Tran-API-1/samples/: sample.md  sample.txt
Tran-API-1/src/: __init__.py  agent.py
Tran-API-1/src/converters/: __init__.py  base_converter.py  docx_converter.py  html_converter.py  markdown_converter.py
Tran-API-1/src/extractors/: __init__.py  base_extractor.py  docx_extractor.py  markdown_extractor.py  ocr_extractor.py  pdf_extractor.py  pptx_extractor.py  text_extractor.py  xlsx_extractor.py
Tran-API-1/src/parsers/: __init__.py
Tran-API-1/src/schemas/: __init__.py  document.py
Tran-API-1/src/utils/: __init__.py  image_utils.py  text_utils.py
Tran-API-1/tests/: __init__.py
Tran-API-1/uploads/: cd100fad_test_excel.xlsx
